--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ html
     box-shadow: 15px 15px 50px purple;
     margin-top: 30vh;
     /* width: 40%; */
-    height: 400px;
+    height: 50%;
     position: relative;
     padding: 50px;}
     .fors form i {
